--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,4 +6,7 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/BPGameMode.BPGameMode_C
+GameDefaultMap=/Game/Levels/LVLTest.LVLTest
 
