--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1D38B718CB45CEFB195A15A5E7604919
 CompanyName=Kwakwa
-Homepage=http://team-kwakwa.com
+Homepage=
 
