--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,4 +9,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/BPGameMode.BPGameMode_C
 GameDefaultMap=/Game/Levels/LVLTest.LVLTest
+EditorStartupMap=/Game/Levels/LVLTest.LVLTest
 
