--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,6 +8,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/BPGameMode.BPGameMode_C
-GameDefaultMap=/Game/Levels/LVLTest.LVLTest
+GameDefaultMap=/Game/Levels/LVLMain.LVLMain
 EditorStartupMap=/Game/Levels/LVLTest.LVLTest
 
